# Disease-trend-system

./: Dockerfile  README.md  docker-compose-dev.yaml  docker-compose.yaml  main.py  pyproject.toml  test.json
disease_trend_system/: app.py  config.py  database.py  endpoints.py  models.py
disease_trend_system/assets/: style.css
disease_trend_system/callbacks/: auth_callbalcks.py  raiting_callbacks.py  trends_callbacks.py  trends_callbacks_detail.py
disease_trend_system/layouts/: auth_layout.py  navbar.py  raiting_layout.py  trends_layout.py  trends_layout_detail.py
disease_trend_system/services/: authentication.py  create_data_trend.py  fake_name_service.py  symptom_complex_transform.py  symptom_complexes_dao.py
disease_trend_system/templates/admin/: index.html
sql/: concurrency_insert.sql  insert_test_data.sql  insert_test_users.sql  sympom_complexes_table.sql  users_table.sql
tests/: cities  hospitals  load_fixtures.py  regions  symptoms  test.json
